<resources>
    <string name="app_name">Favorite Movies</string>

    <string name="welcome_message">Bem-vindo(a) ao FavoritesMovies</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="name">Nome</string>
    <string name="document">CPF</string>
    <string name="phone">Celular</string>
    <string name="confirm_email">Confirme o e-mail</string>
    <string name="confirm_password">Confirme a senha</string>
    <string name="register">Registre-se</string>
    <string name="login">Entrar</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="invalid_login">Usuário e/ou senha inválidos</string>
    <string name="invalid_email">E-mail inválido</string>
    <string name="invalid_email_confirm">E-Mail e confirmação de e-mail não conferem</string>
    <string name="invalid_pass">Senha inválida</string>
    <string name="invalid_pass_confirm">Senha e confirmação de senha não conferem</string>
    <string name="invalid_document">CPF inválido</string>
    <string name="invalid_phone">Celular inválido</string>
    <string name="create_user_error">Erro ao criar usuário, verifique as informações e tente novamente</string>
    <string name="nav_movie_list">Filmes</string>
    <string name="nav_favorites">Favoritos</string>
    <string name="trailer_button"><u>Clique aqui para ver o trailer</u></string>
</resources>
