<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/name"
                android:id="@+id/textInputLayout3">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:hint="@string/document"
                android:id="@+id/textInputLayout4">

            <com.santalu.maskedittext.MaskEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    app:met_mask="###.###.###-##"
                    android:id="@+id/register_document"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:text="@string/invalid_document"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="24dp"
                android:visibility="gone"
                android:id="@+id/register_invalid_doc"
                android:textColor="@android:color/holo_red_light"
                android:textSize="12sp"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:hint="@string/phone"
                android:id="@+id/textInputLayout5">

            <com.santalu.maskedittext.MaskEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    app:met_mask="+55 (##) #####-####"
                    android:id="@+id/register_phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:text="@string/invalid_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="6dp"
                android:layout_marginStart="28dp"
                android:visibility="gone"
                android:id="@+id/register_invalid_phone"
                android:textColor="@android:color/holo_red_light"
                android:textSize="12sp"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/email"
                android:id="@+id/textInputLayout6">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_email"
                    android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_invalid_email"
                android:layout_marginTop="6dp"
                android:text="@string/invalid_email"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="24dp"
                android:textColor="@android:color/holo_red_light"
                android:textSize="12sp"
                android:visibility="gone"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/confirm_email"
                android:id="@+id/textInputLayout7"
                android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_email_confirm"
                    android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:text="@string/invalid_email_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_invalid_email_confirm"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="6dp"
                android:textColor="@android:color/holo_red_light"
                android:textSize="12sp"
                android:visibility="gone"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/password"
                android:id="@+id/textInputLayout8">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_password"
                    android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:text="@string/invalid_pass"
                android:layout_width="match_parent"
                android:layout_marginStart="28dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="24dp"
                android:layout_height="wrap_content"
                android:id="@+id/register_invalid_pass"
                android:textColor="@android:color/holo_red_light"
                android:textSize="12sp"
                android:visibility="gone"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/confirm_password"
                android:id="@+id/textInputLayout9">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_password_confirm"
                    android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:text="@string/invalid_pass_confirm"
                android:layout_width="match_parent"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="6dp"
                android:layout_height="wrap_content"
                android:id="@+id/register_invalid_pass_confirm"
                android:textColor="@android:color/holo_red_light"
                android:textSize="12sp"
                android:visibility="gone"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="24dp"
                android:layout_height="wrap_content">

            <Button
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:id="@+id/sign_up_cancel_btn"
                    android:layout_marginEnd="16dp"
                    android:background="@android:color/white"
                    android:text="@string/cancel"/>
            <Button
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:id="@+id/sign_up_register_btn"
                    android:background="@android:color/white"
                    android:text="@string/confirm"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>