<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:hint="@string/email" android:id="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sign_in_email"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:textAlignment="center"
            android:textSize="20sp" app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:text="@string/welcome_message"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:hint="@string/password" android:id="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/sign_in_password"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:layout_width="140dp"
            android:layout_height="56dp"
            android:id="@+id/sign_in_login_btn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" android:textSize="12sp"
            android:enabled="false"
            android:background="@color/disabled" app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login"/>
    <Button
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:id="@+id/sign_in_register_btn" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="12sp" android:background="@null"
            android:textColor="@android:color/holo_blue_dark" android:text="@string/register"/>
    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp" app:srcCompat="@drawable/ic_movie"
            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name"/>
    <TextView
            android:text="@string/invalid_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in_error_message" android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_login_btn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:textAlignment="viewStart" android:textSize="12sp"
            android:textColor="@android:color/holo_red_light" android:visibility="gone"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="10dp"
            android:id="@+id/sign_in_progress_layout"
            android:background="@color/overlayBackground" android:visibility="gone">

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign_in_progress" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>